# pseuwow

./: .gitignore  PseuWoW.sln  PseuWoW_VC80.sln  PseuWoW_VC90.sln  README_repository_moved.txt  changelog.txt  configure.ac  license.txt  readme.txt  thanks_to.txt  todo_tofix_someday.txt
src/: Controller.vcproj  Makefile.am  PseuWoW.cbp  PseuWoW.vcproj  PseuWoW_VC80.vcproj  PseuWoW_VC90.vcproj  SDL.vcproj  configure.ac  shared.vcproj  shared_VC80.vcproj  shared_VC90.vcproj  sqlite.vcproj  stormlib_VC90.vcproj  zlib.vcproj  zlib_VC80.vcproj  zlib_VC90.vcproj  zthread.vcproj  zthread_VC80.vcproj  zthread_VC90.vcproj
src/Client/: Channel.cpp  Channel.h  Chat.cpp  Chat.h  Cli.cpp  Cli.h  ConfigReader.cpp_  ConfigReader.h_  ControlSocket.cpp  ControlSocket.h  DefScriptInterface.cpp  DefScriptInterface.h  DefScriptInterfaceInclude.h  HelperDefs.h  Makefile.am  MemoryDataHolder.cpp  MemoryDataHolder.h  NameTables.h  PseuWoW.aps  PseuWoW.cpp  PseuWoW.h  PseuWoW.rc  RCa00480  ReadMe.txt  RemoteController.cpp  RemoteController.h  SCPDatabase.cpp  SCPDatabase.h  Script1.aps  Script1.rc  basics.h_  controller.h_  log.cpp  log.h  main.cpp  main.h  resource.h  resource1.h
src/Client/Auth/: AuthCrypt.cpp  AuthCrypt.h  BigNumber.cpp  BigNumber.h  ByteBuffer.h  Sha1.cpp  Sha1.h
src/Client/DefScript/: DefScript.cpp  DefScript.h  DefScriptBBFunctions.cpp  DefScriptDefines.h  DefScriptFileFunctions.cpp  DefScriptFunctions.cpp  DefScriptListFunctions.cpp  DefScriptTools.cpp  DefScriptTools.h  DynamicEvent.cpp  DynamicEvent.h  ListStorage.cpp  ListStorage.h  Makefile.am  ParsingFunctions.cpp_  ParsingFunctions.h_  TypeStorage.cpp  TypeStorage.h  VarSet.cpp  VarSet.h
src/Client/GUI/: CBoneSceneNode.cpp  CBoneSceneNode.h  CCursorController.cpp  CCursorController.h  CImageLoaderBLP.cpp  CImageLoaderBLP.h  CIrrKlangAudioStreamLoaderMP3.cpp  CIrrKlangAudioStreamLoaderMP3.h  CIrrKlangAudioStreamMP3.cpp  CIrrKlangAudioStreamMP3.h  CM2MeshFileLoader.cpp  CM2MeshFileLoader.h  CMDHMemoryReadFile.cpp  CMDHMemoryReadFile.h  CWMOMeshFileLoader.cpp  CWMOMeshFileLoader.h  DrawObjMgr.cpp  DrawObjMgr.h  DrawObject.cpp  DrawObject.h  GUIEventReceiver.h  MCamera.h  MInput.h  Makefile.am  MemoryInterface.cpp  MemoryInterface.h  PseuGUI.cpp  PseuGUI.h  SImage.cpp  SImage.h  SSkinnedMesh.cpp  SSkinnedMesh.h  Scene.cpp  Scene.h  SceneCharselection.cpp  SceneData.h  SceneGuiStart.cpp  SceneLogin.cpp  SceneWorld.cpp  ShTlTerrainSceneNode.cpp  (+6 more)
src/Client/GUI/decoder/: bits.c  internal.h  mpaudec.c  mpaudec.h  mpaudectab.h  mpegaudio.h
src/Client/Realm/: Makefile.am  RealmAuth.cpp_  RealmAuth.h_  RealmListHandler.cpp_  RealmListHandler.h_  RealmSession.cpp  RealmSession.h  RealmSocket.cpp  RealmSocket.h
src/Client/World/: Bag.cpp  Bag.h  CMSGConstructor.cpp  CacheHandler.cpp  CacheHandler.h  Channel.cpp  Channel.h  Corpse.cpp  Corpse.h  DynamicObject.cpp  DynamicObject.h  GameObject.cpp  GameObject.h  Item.cpp  Item.h  Makefile.am  MapMgr.cpp  MapMgr.h  MovementMgr.cpp  MovementMgr.h  ObjMgr.cpp  ObjMgr.h  Object.cpp  Object.h  ObjectDefines.h  Opcodes.cpp  Opcodes.h  Player.cpp  Player.h  SharedDefines.h  Unit.cpp  Unit.h  UpdateData.cpp  UpdateData.h  UpdateFields.h  UpdateMask.h  World.cpp  World.h  WorldPacket.cpp  WorldPacket.h  (+6 more)
src/Client/doc/: Ludmilla_1.8.0_LogonCodes.h.txt  Ludmilla_1.8.0_LogonPackets.h.txt  RS Connection.html
src/Controller/: Controller.cpp
src/dep/: Makefile.am
src/dep/include/StormLib/: SCommon.h  StormLib.h
src/dep/include/irrklang/: ik_ISoundEngine.h  ik_ISoundSource.h  irrKlang.h
src/dep/include/irrlicht/: EDriverTypes.h  EGUIElementTypes.h  ESceneNodeAnimatorTypes.h  ESceneNodeTypes.h  IAnimatedMesh.h  IAnimatedMeshB3d.h  IAnimatedMeshMD2.h  IAnimatedMeshMD3.h  IAnimatedMeshMS3D.h  IAnimatedMeshSceneNode.h  IAnimatedMeshX.h  IAttributeExchangingObject.h  IAttributes.h  IBillboardSceneNode.h  ICameraSceneNode.h  ICursorControl.h  IDummyTransformationSceneNode.h  IEventReceiver.h  IFileList.h  IFileSystem.h  IGPUProgrammingServices.h  IGUIButton.h  IGUICheckBox.h  IGUIColorSelectDialog.h  IGUIComboBox.h  IGUIContextMenu.h  IGUIEditBox.h  IGUIElement.h  IGUIElementFactory.h  IGUIEnvironment.h  IGUIFileOpenDialog.h  IGUIFont.h  IGUIFontBitmap.h  IGUIImage.h  IGUIInOutFader.h  IGUIListBox.h  IGUIMeshViewer.h  IGUIScrollBar.h  IGUISkin.h  IGUISpriteBank.h  (+88 more)
src/dep/include/openssl/: aes.h  asn1t.h  bio.h  dh.h  dsa.h  ec.h  ecdsa.h  evp.h  md2.h  md4.h  md5.h  obj_mac.h  opensslconf.h  opensslv.h  pem.h  ripemd.h  rsa.h  safestack.h  sha.h  ssl.h  tls1.h  x509.h  x509_vfy.h  x509v3.h
src/dep/lib/: zlib.lib
src/dep/src/: Makefile.am
src/shared/: ADTFile.cpp  ADTFile.h  ADTFileStructs.h  ByteBuffer.h  DBCFieldData.h  DebugStuff.h  Locale.cpp  LocaleDetector.cpp  LocaleDetector.h  MPQFile.cpp  MPQHelper.cpp  MPQHelper.h  Makefile.am  MapTile.cpp  MapTile.h  ProgressBar.cpp  ProgressBar.h  SysDefs.h  WDTFile.cpp  WDTFile.h  Widen.h  ZCompressor.cpp  ZCompressor.h  common.h  dbcfile.cpp  dbcfile.h  log.cpp  log.h  tools.cpp  tools.h
src/shared/Auth/: AuthCrypt.cpp  AuthCrypt.h  BigNumber.cpp  BigNumber.h  Hmac.cpp  Hmac.h  MD5Hash.h  Makefile.am  SARC4.cpp  SARC4.h  Sha1.h
src/shared/Network/: Makefile.am  Socket.h  SocketHandler.cpp  SocketHandler.h  TcpSocket.cpp  TcpSocket.h  socket_include.h
src/shared/sqlitewrapped/: Database.cpp  Database.h  IError.h  Query.cpp  Query.h  StderrLog.cpp  StderrLog.h  SysLog.cpp  SysLog.h
src/tools/: Makefile.am  stuffextract.vcproj  stuffextract_VC80.vcproj  stuffextract_VC90.vcproj  viewer_VC90.vcproj
src/tools/PseuWoWConsole/: PseuWoWConsole ReadMe.txt
src/tools/stuffextract/: DBCFieldData.h  Locale.cpp  Locale.h  MPQFile.cpp  MPQFile.h  MPQHelper.cpp  MPQHelper.h  Makefile.am  StuffExtract.cpp  StuffExtract.h  dbcfile.cpp  dbcfile.h
src/tools/stuffextract/StormLib/: Makefile.am  SCompression.cpp  SFileCompactArchive.cpp  SFileOpenFileEx.cpp  SFileReadFile.cpp  StormLib.h  StormPort.h  StormPortLinux.cpp  StormPortMac.cpp
src/tools/stuffextract/StormLib/pklib/: pklib.h
src/tools/viewer/: Makefile.am  main.cpp
(+423 files in other folders)
