## Process this file with automake to produce Makefile.in
AM_CPPFLAGS = -I$(top_builddir)/Client -I$(top_builddir)/shared -I$(top_builddir)/Client/DefScript -I$(top_builddir)/Client/World -I$(top_builddir)/Client/Realm  -Wall
## Build pseuwow
noinst_LIBRARIES = libauth.a
libauth_a_SOURCES = AuthCrypt.cpp  BigNumber.cpp  md5.c  Sha1.cpp
