## Process this file with automake to produce Makefile.in
AM_CPPFLAGS = -I$(top_builddir)/src/Client -I$(top_builddir)/src/shared -I$(top_builddir)/src/Client/DefScript -I$(top_builddir)/src/Client/World -I$(top_builddir)/src/Client/Realm  -Wall
## Build pseuwow
noinst_LIBRARIES = libnetwork.a
libnetwork_a_SOURCES =Base64.cpp          PoolSocket.cpp    Socket.cpp          SocketThread.cpp  Thread.cpp CircularBuffer.cpp  ResolvServer.cpp  SocketHandler.cpp   StdoutLog.cpp     UdpSocket.cpp Parse.cpp           ResolvSocket.cpp  socket_include.cpp  TcpSocket.cpp     Utility.cpp
